# aoc2024

./: .gitignore  .nvim.lua  aoc2024.cabal  devenv.nix
src/Day1/: Solution.hs
src/Day2/: Solution.hs
src/Day3/: Solution.hs
src/Day4/: Solution.hs
src/Day5/: Solution.hs
src/Day6/: Solution.hs
src/Day7/: Solution.hs
src/Shared/: Matrix.hs
src/Shared/Matrix/: Operators.hs  Types.hs
