cabal-version:   3.0
name:            aoc2024
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          ser
maintainer:      140543954+serlovesferrets@users.noreply.github.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings

  -- exposed-modules: 
  other-modules:
    Day1.Solution
    Day2.Solution

  default-extensions:
    LambdaCase
    OverloadedStrings

  -- other-extensions:

  build-depends:
    , base         ^>=4.18.2.0
    , containers   >=0.6.7     && <0.7
    , optics-core  >=0.4.1     && <0.5
    , text         >=2.0.2     && <2.1

  hs-source-dirs:     src
  default-language:   GHC2021
